keel-deploy-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keel
  namespace: "keel"
  labels:
    app: keel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keel
  template:
    metadata:
      labels:
        app: keel
    spec:
      serviceAccountName: keel
      containers:
      - name: keel
        # Note that we use appVersion to get images tag.
        volumeMounts:
        - name: keel-secrets
          mountPath: "/mnt/vault"
          readOnly: true
      volumes:
      - name: keel-secrets
        csi:
          driver: "secrets-store.csi.k8s.io"
          readOnly: true
          volumeAttributes:
            secretProviderClass: "keel"
