keel-svc-patch.yml
apiVersion: v1
kind: Service
metadata:
  name: keel
  namespace: keel
spec:
  type: ClusterIP
  ports:
    - port: 9300
      targetPort: keel
